fix: change css avatar image

--- a/src/blocks/profile/__btn-edit-avatar/profile__btn-edit-avatar.css
+++ b/src/blocks/profile/__btn-edit-avatar/profile__btn-edit-avatar.css
@@ -7,8 +7,9 @@
   border: none;
   font: inherit;
   color: inherit;
-  background-color: transparent;
+  background: no-repeat center/cover;
   border-radius: 50%;
+  object-fit: cover;
   overflow: hidden;
 }
 
